# speechdatasety

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
speechdatasety/helper/: access.py  access_test.py  adress.py  archive.py  loader.py  process.py  process_test.py
speechdatasety/interface/: speechcorpusy.py
