[tool.poetry]
name = "speechdatasety"
version = "0.2.0"
description = "speechdatasety - Python dataset handler & infrastructure"
authors = ["Tarepan"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tarepan/speechdatasety"


[tool.poetry.dependencies]
python = "^3.7"
speechcorpusy = {git = "https://github.com/tarepan/speechcorpusy.git", rev = "main"}
omegaconf = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
